[gd_scene load_steps=2 format=3 uid="uid://khpkfqnos2o"]

[ext_resource type="Script" uid="uid://boigurwylus4v" path="res://level/utils/debug_ui/debug_canvas.gd" id="1_1am7n"]

[node name="DebugCanvasLayer" type="CanvasLayer"]
layer = 2
script = ExtResource("1_1am7n")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="StateLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="PanelContainer3" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer3"]
layout_mode = 2

[node name="Speedometer" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer3/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="PanelContainer4" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer4"]
layout_mode = 2

[node name="WorldPosition" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer4/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="HookshotDistance" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer2/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="PanelContainer5" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer5"]
layout_mode = 2

[node name="CurrentTileName" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer5/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="PanelContainer6" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer6"]
layout_mode = 2

[node name="CurrentTileGridPosition" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer6/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
